--- a/include/GUI/view.ui
+++ b/include/GUI/view.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>main_window</class>
-    <widget class="QMainWindow" name="View">
+    <class>View</class>
+    <widget class="QMainWindow" name="main_widget">
         <property name="geometry">
             <rect>
                 <x>0</x>
