--- a/include/GUI/view.ui
+++ b/include/GUI/view.ui
@@ -1,82 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>View</class>
-    <widget class="QMainWindow" name="main_widget">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>624</width>
-                <height>686</height>
-            </rect>
-        </property>
-        <property name="windowTitle">
-            <string>PosiPhone</string>
-        </property>
-        <property name="autoFillBackground">
-            <bool>true</bool>
-        </property>
-        <widget class="QWidget" name="centralwidget">
-            <layout class="QGridLayout" name="gridLayout">
-                <item row="0" column="0">
-                    <widget class="QGraphicsView" name="view">
-                        <property name="geometry">
-                            <rect>
-                                <x>-300</x>
-                                <y>-300</y>
-                                <width>600</width>
-                                <height>600</height>
-                            </rect>
-                        </property>
-                        <property name="verticalScrollBarPolicy">
-                            <enum>Qt::ScrollBarAlwaysOff</enum>
-                        </property>
-                        <property name="horizontalScrollBarPolicy">
-                            <enum>Qt::ScrollBarAlwaysOff</enum>
-                        </property>
-                        <property name="renderHints">
-                            <set>QPainter::Antialiasing</set>
-                        </property>
-                    </widget>
-                </item>
-                <item row="2" column="0">
-                    <layout class="QHBoxLayout" name="horizontalLayout">
-                        <item>
-                            <widget class="Recorder" name="recorder"/>
-                        </item>
-                        <item>
-                            <widget class="Player" name="player"/>
-                        </item>
-                        <item>
-                            <spacer name="horizontalSpacer">
-                                <property name="orientation">
-                                    <enum>Qt::Horizontal</enum>
-                                </property>
-                                <property name="sizeHint" stdset="0">
-                                    <size>
-                                        <width>40</width>
-                                        <height>20</height>
-                                    </size>
-                                </property>
-                            </spacer>
-                        </item>
-                    </layout>
-                </item>
-            </layout>
-        </widget>
-    </widget>
-    <customwidgets>
-        <customwidget>
-            <class>Recorder</class>
-            <extends>QPushButton</extends>
-            <header>audio.h</header>
-        </customwidget>
-        <customwidget>
-            <class>Player</class>
-            <extends>QPushButton</extends>
-            <header>audio.h</header>
-        </customwidget>
-    </customwidgets>
-    <resources/>
-    <connections/>
+ <class>View</class>
+ <widget class="QMainWindow" name="View">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>624</width>
+    <height>686</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>PosiPhone</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>true</bool>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QGraphicsView" name="view">
+      <property name="verticalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="horizontalScrollBarPolicy">
+       <enum>Qt::ScrollBarAlwaysOff</enum>
+      </property>
+      <property name="renderHints">
+       <set>QPainter::Antialiasing</set>
+      </property>
+      <property name="cacheMode">
+       <set>QGraphicsView::CacheBackground</set>
+      </property>
+      <property name="viewportUpdateMode">
+       <enum>QGraphicsView::FullViewportUpdate</enum>
+      </property>
+      <property name="optimizationFlags">
+       <set>QGraphicsView::IndirectPainting</set>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout"/>
+    </item>
+   </layout>
+  </widget>
+ </widget>
+ <resources/>
+ <connections/>
 </ui>
